<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@android:color/white">
	<ImageView
		android:layout_marginTop="30dp"
		android:contentDescription="@string/header"
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="80dp"
		android:src="@drawable/logo_correct"
		android:scaleX=".9"
		/>
	<ImageButton
		android:id="@+id/statusbtn"
		android:contentDescription="@string/status"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="20dp"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_gravity="center"
		android:src="@drawable/play"
		android:visibility="visible"/>
	<ImageButton
		android:id="@+id/status2"
		android:contentDescription="@string/panic"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="20dp"
		android:src="@drawable/panic"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_gravity="center"
		android:visibility="gone"/>
	<Spinner
		android:id="@+id/muses_spinner"
		android:layout_width="match_parent"
		android:layout_height="60dp" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:orientation="horizontal"
		android:layout_marginBottom="10dp">
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_margin="4dp"
			android:text="@string/refresh"
			android:id="@+id/refresbtn"/>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_margin="4dp"
			android:text="@string/pause"
			android:id="@+id/pause"/>
	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:layout_height="60dp"
		android:id="@+id/statusView"
		android:text="@string/statusText"
		android:textSize="30sp"/>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="20dp"
		android:id="@+id/version"
		android:layout_gravity="center"/>

</LinearLayout>
